<resources>
    <string name="app_name">Saloon Appointment Scheduling</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="Registration">Customer Registration</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Contact Number</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="saloonRegistration">Saloon Registration</string>
    <string name="location">Saloon Location</string>
    <string name="saloonName">Saloon Name</string>
    <string name="add_service">Add Service</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_now">Register Now!</string>

    <string name="reset">Reset</string>
    <string name="reset_your_your_password">By Clicking on Rest Button! You will receive an email to reset your password</string>
    <string name="all_registered_saloons">All Registered Saloons</string>

    <string name="saloon_location">Saloon Location</string>
    <string name="user_name">User Name</string>
    <string name="customer_location">Customer Location</string>
    <string name="customer_gender">Gender</string>
    <string name="search_for_specific_saloon">Search for specific Saloon</string>
    <string name="login_as">Login as!</string>
    <string name="saloon">Saloon</string>
    <string name="customer">Customer</string>
    <string name="search_for_specific_customer">Search for specific Customer</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_history">History</string>
    <string name="title_notification">Notification</string>
    <string name="saloon_name">Saloon Name</string>
    <string name="saloon_service">Saloon Service</string>
    <string name="saloon_service_number_1">Saloon Service Number 1</string>
    <string name="saloon_service_number_2">Saloon Service Number 2</string>
    <string name="reset_password">Reset Password</string>
    <string name="todo">TODO</string>
    <string name="saloon_info_update">Saloon Info Update</string>
    <string name="contact_number">Contact Number</string>
    <string name="update">Update</string>
    <string name="saloon_ser">Saloon Service</string>
    <string name="edit_price">Edit Price</string>
    <string name="edit_service_price">Edit Service Price</string>
    <string name="saloon_staff_list">Saloon Staff List</string>
    <string name="staff_name">Name</string>
    <string name="staff_address">Address</string>
    <string name="staff_phone">Phone</string>
    <string name="staff_type">Type</string>
    <string name="add_staff">Add Staff</string>
    <string name="designation">Designation</string>
    <string name="isfree">isFree</string>
    <string name="worker_type">Worker Type</string>
    <string name="add_saloon_service">Add Saloon Service</string>
    <string name="register">Register</string>
    <string name="working_days">Working Days and Time</string>
    <string name="day_from">Day from</string>
    <string name="day_to">Day to</string>
    <string name="time_from">Time From</string>
    <string name="time_to">Time to</string>
    <string name="logout">Logout</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_info_update">Customer Info Update Dialog</string>


    <string name="map_api_key" translatable="false">AIzaSyB4nUZ_skcG4HyxHJnQwwiJu0idj3-v0dE</string>
    <string name="price_range">Price Range</string>
    <string name="filter_by_price">Filter by Price</string>
    <string name="filter">Filter</string>
    <string name="zero">0</string>
    <string name="by_price_filtered_data">By Price Filtered Data</string>
    <string name="rating">Rating</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="saloon_rating">Saloon Rating</string>
    <string name="comments">Comments</string>
    <string name="book_now">Book Now</string>
    <string name="Days">Select Day</string>
    <string name="Time">Select Time</string>
    <string name="booking_info">Booking Information</string>
    <string name="book">Send Request</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="status">status</string>
    <string name="day_time">Day and Time</string>
    <string name="cancel">Cancel</string>
    <string name="pending">Pending</string>
    <string name="scheduled">Scheduled</string>
</resources>