<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:background="@drawable/style_dialog"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/customer_info_update"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_customer_update_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_dialog"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_close_24" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorBlack" />


    <ImageView
        android:id="@+id/update_customer_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_baseline_photo_camera" />


    <EditText
        android:id="@+id/update_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/update_customer_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/contact_number"
        android:importantForAutofill="no"
        android:inputType="number"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/update_customer_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="TextFields" />



    <Button
        android:id="@+id/btn_update_customer_info"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:textSize="18sp"
        android:background="@drawable/style_dialog"
        android:text="@string/update"
        android:textAllCaps="false" />

</LinearLayout>
