<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/style_dialog"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/add_staff"
                android:textColor="@color/colorBlack"
                android:textSize="22sp" />

            <ImageView
                android:id="@+id/iv_add_saloon_staff_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_dialog"
                android:contentDescription="@string/todo"

                android:src="@drawable/ic_baseline_close_24" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="8dp"
            android:background="@color/colorBlack" />

        <ImageView
            android:id="@+id/staff_profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_photo_camera" />


        <EditText
            android:id="@+id/add_staff_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/staff_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/add_staff_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/staff_phone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColor="@color/colorBlack"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/add_staff_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/staff_address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/colorBlack"
            tools:ignore="TextFields" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/designation"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/staff_designation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_add_saloon_staff"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/style_dialog"
            android:text="@string/add_staff"
            android:textAllCaps="false" />


    </LinearLayout>

</ScrollView>