<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".fragments.RestPasswordFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/style_dialog"
        android:elevation="10dp"
        android:padding="10dp"
        app:cardCornerRadius="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="@string/reset_password"
            android:textColor="@color/colorBlack"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60sp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/ed_forgot_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/colorBlack"
                android:textSize="22sp"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"
            android:background="@drawable/style_dialog"
            android:padding="10dp"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210sp"
            android:padding="20dp"
            android:text="@string/reset_your_your_password"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />


    </androidx.cardview.widget.CardView>


</LinearLayout>