<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/style_dialog"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/edit_service_price"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />

        <ImageView
            android:id="@+id/iv_edit_service_price_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/style_dialog"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_close_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit_service_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_update_service_price"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        android:background="@drawable/style_dialog"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded" />


</LinearLayout>